--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico" sizes="150x150">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Almacén del centro</title>
   </head>
