--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="apple-touch-icon" href="/logo-app.png" sizes="150x150">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Almacén del centro</title>
+    <!-- TODO: Add meta description -->
   </head>
   <body>
     <div id="root"></div>
