--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/logo-app.png" sizes="150x150">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
-    <title>Almacén del centro</title>
-    <!-- TODO: Add meta description -->
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+		<link rel="apple-touch-icon" href="/logo-app.png" sizes="150x150" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+			content="Almacén familiar ubicado en San Luis donde además de conseguir todo tipo de productos podrás conocer más sobre la cultura de Argentina."
+		/>
+		<title>Almacén del centro</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
+	</body>
 </html>
