Responsive for deprecated devices and seo implements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
 			content="Almacén familiar ubicado en San Luis donde además de conseguir todo tipo de productos podrás conocer más sobre la cultura de Argentina."
 		/>
+		<meta name="theme-color" content="#FFFF"/>
 		<title>Almacén del centro</title>
 	</head>
 	<body>
