--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/logo-app.png" sizes="150x150" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description"
-			content="Almacén familiar ubicado en San Luis donde además de conseguir todo tipo de productos podrás conocer más sobre la cultura de Argentina."
+		<meta
+			name="description"
+			content="Almacén familiar donde podrás conseguir todo tipo de productos y conocer más sobre la cultura de Argentina."
 		/>
-		<meta name="theme-color" content="#FFFF"/>
-		<title>Almacén del centro</title>
+		<meta name="theme-color" content="#FFFF" />
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://almacendelcentro.com/" />
+		<meta
+			property="og:title"
+			content="Almacén del centro - San Luis, Argentina"
+		/>
+		<meta
+			property="og:description"
+			content="Almacén familiar donde podrás conseguir todo tipo de productos y conocer más sobre la cultura de Argentina."
+		/>
+		<title>Almacén del centro - San Luis, Argentina</title>
 	</head>
 	<body>
 		<div id="root"></div>
