--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<meta name="theme-color" content="#FFFF" />
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
+		<!-- TODO: Change URL when we'll buy the domain -->
 		<meta property="og:url" content="https://almacendelcentro.com/" />
 		<meta
 			property="og:title"
