Change font import

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/logo-app.png" sizes="150x150" />
+		<link href="https://www.dafontfree.net/embed/Y29wcGVycGxhdGUtZ290aGljLWJvbGQtcmVndWxhciZkYXRhLzI0L2MvMTE5NzQ2L0NvcHBlcnBsYXRlR290aGljQm9sZC50dGY" rel="stylesheet" type="text/css" loading="lazy"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta
 			name="description"
