--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 		<meta name="theme-color" content="#FFFF" />
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
-		<!-- TODO: Change URL when we'll buy the domain -->
-		<meta property="og:url" content="https://almacendelcentro.com/" />
+		<meta property="og:url" content="https://almacendelcentro.com.ar/" />
 		<meta
 			property="og:title"
 			content="Almacén del centro - San Luis, Argentina"
